<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:gravity="center_horizontal"
    android:background="@color/white"
    >
    <com.cslx.greenheart.view.customview.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />
    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apptitle"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/font_theme"
        />
    <TextView
        android:id="@+id/tv_appname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/official_app"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/font_theme"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_theme"
            android:textSize="14sp"
            android:text="@string/login_type"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_wechat"
            />
        <View
            android:layout_width="50dp"
            android:layout_height="1dp"/>
        <ImageView
            android:id="@+id/iv_alipay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_alipay"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_protocol"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:layout_marginRight="4dp"
            />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_protocol"
            android:textSize="14sp"
            android:textColor="@color/themecolor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 和 "
            android:textSize="14sp"
            android:textColor="@color/font_theme"
            />
        <TextView
            android:id="@+id/tv_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret"
            android:textSize="14sp"
            android:textColor="@color/themecolor"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_free_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:text="@string/free_login"
        android:textColor="@color/font_theme"
        />
</LinearLayout>